--- a/_config.yml
+++ b/_config.yml
@@ -96,6 +96,7 @@ sidebars:
 title: Azzets Project Documentation
 description: Azzets Project Documentation
 url: https://ddnwizzie.github.io/azzets2/
+baseurl: /azzets2
 logo: /images/wizzie_logo.png
 lang: 'en-US'
 
