--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ sidebars:
 
 title: Azzets Project Documentation
 description: Azzets Project Documentation
-url: https://ddnwizzie.github.io/azzets2/
+url: https://ddnwizzie.github.io
 baseurl: /azzets2
 logo: /images/wizzie_logo.png
 lang: 'en-US'
